# brownian_motion_thesis

./: .gitignore  LICENSE  README.md  pyproject.toml  threadpool_info.py
src/simcore/: __init__.py  analyze.py  boundaries.py  cli.py  config.py  io.py  metrics.py  models.py  physics.py  simulator.py  vis.py
